Replace JVM noop state store with FFM macOS Keychain backend
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>